Roles endpoints added.
